- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    Some future release
- 
    None
When compiling the qtmultimedia dev branch on ubuntu 14.04 with clang 5.0.2
/home/build/Buildbot/qt5-analysis-linux64/source/qtmultimedia/src/gsttools/qgstreamervideorenderer.cpp:116:13: error: use of undeclared identifier 'QGstVideoRendererSink'
 QGstVideoRendererSink::setSurface(m_surface);
 ^