Gstreamer: Fix undeclared identifier QGstVideoRendererSink in 0.10 ver

Task-number: QTBUG-70465
Change-Id: I6af46cb8de0b40dc41aaa0b999faf68d102c7b48
Reviewed-by: Christian Stromme <christian.stromme@qt.io>